--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,7 @@ coverage.xml
 *.pot
 
 # Django stuff:
-*.log
+*.log*
 local_settings.py
 db.sqlite3
 
@@ -102,3 +102,9 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+xml/*
+.DS_Store
+*/*/.DS_Store
+
+
+
