--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@ certifi==2018.11.29
 chardet==3.0.4
 idna==2.8
 legendarium==2.0.2
+lxml==4.3.1
+packtools==2.4
+picles.plumber==0.11
 requests==2.21.0
 urllib3==1.24.1
 xylose==1.35.1
