--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 certifi==2018.11.29
 chardet==3.0.4
 coverage==4.5.2
--e git+git@github.com:cesarbruschetta/document-store-migracao.git@54e8dc279b336f40a772e204de3142a7bb715382#egg=documentstore_migracao
+-e git+https://github.com/cesarbruschetta/document-store-migracao.git@54e8dc279b336f40a772e204de3142a7bb715382#egg=documentstore_migracao
 idna==2.8
 legendarium==2.0.2
 lxml==4.3.1
