Ignora pastas relacionadas ao JSON e exclui isis2json da cobertura

--- a/.gitignore
+++ b/.gitignore
@@ -100,11 +100,14 @@ venv.bak/
 # mkdocs documentation
 /site
 
+# editors
+.vscode/
+
 # mypy
 .mypy_cache/
 xml/*
 .DS_Store
 */*/.DS_Store
-
+json/*
 
 
