--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ matrix:
 before_install:
     - pip install --upgrade setuptools pip
     - pip install -r requirements.txt
-install: python setup.py install
+install: pip install -e .[testing]
 script:
   - coverage run setup.py test
 after_success:
