--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-articlemetaapi==1.26.5
+articlemetaapi==1.26.6
 atomicwrites==1.3.0
 attrs==19.1.0
 beautifulsoup4==4.7.1
@@ -35,7 +35,7 @@ repoze.lru==0.7
 requests==2.21.0
 six==1.12.0
 soupsieve==1.9
-thriftpy==0.3.9
+thriftpy2==0.4.2
 translationstring==1.3
 urllib3==1.24.1
 venusian==1.2.0
