#58 update Python e libs

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,25 @@
-articlemetaapi==1.26.5
+articlemetaapi==1.26.6
 atomicwrites==1.3.0
 attrs==19.1.0
 beautifulsoup4==4.7.1
 certifi==2019.3.9
 chardet==3.0.4
+colander==1.7.0
+cornice==3.5.1
+cornice-swagger==0.7.0
 coverage==4.5.2
 hupper==1.6.1
 idna==2.8
+iso8601==0.1.12
 Jinja2==2.10
 legendarium==2.0.2
 lxml==4.3.1
 Mako==1.0.8
 MarkupSafe==1.1.1
+minio==4.0.16
 more-itertools==6.0.0
 nose==1.3.7
+numpy==1.16.3
 packtools==2.4
 paginate==0.5.6
 PasteDeploy==2.0.1
@@ -25,18 +31,30 @@ pluggy==0.9.0
 ply==3.11
 py==1.8.0
 Pygments==2.3.1
+pymongo==3.8.0
 pyramid==1.10.2
 pyramid-debugtoolbar==4.5
 pyramid-jinja2==2.8
 pyramid-mako==1.0.2
 pytest==4.3.1
 pytest-cov==2.6.1
+python-dateutil==2.8.0
+python-Levenshtein==0.12.0
+python-slugify==3.0.2
+pytz==2019.1
+regex==2019.4.14
 repoze.lru==0.7
 requests==2.21.0
+scielo-clea==0.3.0
+-e git://github.com/scieloorg/document-store.git@9422e6c8b8c25d5980c0c441b77293a42aaf77ec#egg=scielo_documentstore
+simplejson==3.16.0
 six==1.12.0
 soupsieve==1.9
-thriftpy==0.3.9
+text-unidecode==1.2
+thriftpy2==0.4.2
+tqdm==4.31.1
 translationstring==1.3
+Unidecode==1.0.23
 urllib3==1.24.1
 venusian==1.2.0
 waitress==1.2.1
@@ -45,4 +63,3 @@ WebTest==2.0.33
 xylose==1.35.1
 zope.deprecation==4.4.0
 zope.interface==4.6.0
--e git://github.com/scieloorg/document-store.git@9422e6c8b8c25d5980c0c441b77293a42aaf77ec#egg=documentstore
