--- a/requirements.txt
+++ b/requirements.txt
@@ -46,7 +46,7 @@ regex==2019.4.14
 repoze.lru==0.7
 requests==2.21.0
 scielo-clea==0.3.0
-https://github.com/scieloorg/kernel/archive/master.tar.gz#egg=scielo-kernel
+-e git+https://github.com/scieloorg/kernel.git#egg=scielo-kernel
 simplejson==3.16.0
 six==1.12.0
 soupsieve==1.9
