--- a/requirements.txt
+++ b/requirements.txt
@@ -66,3 +66,8 @@ zope.interface==4.6.0
 fs==2.4.5
 -e git+https://github.com/scieloorg/opac_schema.git@v2.54#egg=opac_schema
 SQLAlchemy==1.3.13
+click==7.1.1
+construct==2.10.56
+ioisis==0.3.0
+JPype1==0.7.2
+ujson==2.0.3
